test: adjust tests to pass after including next auth

--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -20,7 +20,6 @@
   background-size: 200% 200%;
   animation: bgGradient 20s ease infinite;
 }
-
 @keyframes bgGradient {
   0% {
     background-position: 0% 50%;
@@ -30,5 +29,15 @@
   }
   100% {
     background-position: 0% 50%;
+  }
+}
+
+.spinner_ajPY {
+  transform-origin: center;
+  animation: spinner_AtaB 0.75s infinite linear;
+}
+@keyframes spinner_AtaB {
+  100% {
+    transform: rotate(360deg);
   }
 }
