--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -7,11 +7,11 @@
 }
 
 ::-webkit-scrollbar-track {
-  @apply rounded-full bg-zinc-900;
+  @apply bg-zinc-900;
 }
 
 ::-webkit-scrollbar-thumb {
-  @apply cursor-pointer rounded-full border-2 border-solid border-zinc-900 bg-orange-400 hover:bg-orange-500;
+  @apply cursor-pointer border-2 border-solid border-zinc-900 bg-orange-400 hover:bg-orange-500;
 }
 
 .bg-gradient {
@@ -39,5 +39,20 @@
 @keyframes spinner_AtaB {
   100% {
     transform: rotate(360deg);
+  }
+}
+
+.shimmer {
+  background: #3f3f46;
+  background: linear-gradient(-45deg, #3f3f46 40%, #71717a 50%, #3f3f46 60%);
+  background-size: 400%;
+  animation: shimmer 1s ease-in-out infinite;
+}
+@keyframes shimmer {
+  0% {
+    background-position-x: 100%;
+  }
+  100% {
+    background-position-x: 0%;
   }
 }
